--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
-.one{
-    color : red;
+*{
+    box-sizing: border-box;
+
+}
+body{
+    margin:0;
+    font-family: Nunito,sans-serif;
+}
+.header-container{
+ box-shadow: 0 2px 4px 0px rgba(0, 0, 0, .1);
+  padding-inline: 24px;
+}
+.header{
+    display: flex;
+     align-items: center;
+    justify-content: space-between;
+    max-width: 1400px;
+    margin-inline: auto;
+   
+   
+}
+.title{
+    font-weight: 800;
 }
