--- a/style.css
+++ b/style.css
@@ -16,9 +16,50 @@ body{
     justify-content: space-between;
     max-width: 1400px;
     margin-inline: auto;
-   
-   
 }
 .title{
     font-weight: 800;
+}
+.countries-container{
+     max-width: 1400px;
+      display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.country-card{
+    width: 250px;
+    flex-shrink: 0;
+    border-radius: 4px;
+     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, .1);
+     overflow: hidden;
+     padding-bottom: 25px;
+     transition: all 0.2s ease-in-out;
+     margin: 40px;
+     margin-inline: auto;
+}
+.country-card img{
+    width: 100%;
+}
+.card-text{
+    padding-inline: 15px;
+}
+.card-text h3{
+    font-size: 24px;
+    margin-block: 15px;
+}
+.card-text p{
+    
+    margin-block: 10px;
+}
+.main{
+    
+    padding: 24px;
+  
+   
+}
+.country-card:hover{
+cursor: pointer;
+transform: scale(1.05);
+ box-shadow: 0 2px 16px 0px rgba(0, 0, 0, .5);
+
 }
